integrated user resgister , login , verify-otp with frontend
