# server/context/common_request.go
@@ -1,0 +1,5 @@
+package context
+
+type UserNameCheck struct {
+	Username string `json:"username"`
+}
